--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
-*{
+@media all and (min-width: 992px) {
+	.navbar .nav-item .dropdown-menu{ display: none; }
+	.navbar .nav-item:hover .nav-link{   }
+	.navbar .nav-item:hover .dropdown-menu{ display: block; }
+	.navbar .nav-item .dropdown-menu{ margin-top:0; }
+}	
+.logo{width: 80px;}
+.cards {
+    transition: all 0.2s ease;
+    cursor: pointer
+}
+
+.cards:hover {
+    box-shadow: 5px 6px 6px 2px #e9ecef;
+    transform: scale(1.1)
+}
+body{
    font-family: 'Roboto', sans-serif;  
    text-transform: uppercase;
    text-align: center;
-} 
-
-body{
     background-color: white;
+}
+.apps{
+    font-size: 32px;
 }
 .bg-nav{
     display: absolute;
@@ -28,6 +44,7 @@ body{
 .portada{
     display: block;
     width: 100%;
+    max-height: min-content;
 }
 .TwoCol{
     display: grid;
@@ -79,20 +96,14 @@ width: 5rem;
     .navbar{
         text-align: start;
     }
-/*  .portadas{
-     display: grid;
-     -ms-grid-columns: auto -ms-grid-columns;     
- } */
+    .apps{
+        font-size: 32px;
+    }
+
     .mapa{
         width: 100%;
         height: 50vh;
     }
- .whatsapp{
-    font-size: 8vh;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    color: green; }
     .principales-servicios{
         list-style: none;
         display: block;
@@ -102,9 +113,6 @@ width: 5rem;
     .TwoCol{
         display: block;
     }
-    .carousel{
-        display: none;
-    }
     .mapa{
         width: 100%;
         height: 10rem;
@@ -113,11 +121,7 @@ width: 5rem;
 
 }
 @media screen and (min-width:1200px) {
-/*     
-    .portada{
-        width: 100%;
-        height: 40vh;
-    } */
+
     .mapa{
         width: 100%;
         height: 30vh;
@@ -126,7 +130,7 @@ width: 5rem;
     }
 }
 @media screen and (max-width:530px) {
-    .numeroTel{
+    .cerrar_movil{
         display: none;
     }
 
